--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,11 +5,13 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
+    <a class="article-link" href="/articles">投稿一覧へ</a>
     <div class="top-wrapper">
       <h1>Movie Review!</h1>
+      <img src="images/cat.jpeg" width="300px" height="300px" >
     </div>
     <div>
-      <a href="/articles">投稿一覧へ</a>
+
     </div>
 
 
